--- a/styles/style.css
+++ b/styles/style.css
@@ -50,8 +50,6 @@ ol {
 }
 
 .content {
-  width: 1140px;
-  height: 534px;
   display: flex;
   gap: 30px;
   align-items: end;
@@ -59,22 +57,27 @@ ol {
 
 .result {
   width: 711px;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
 }
 
 .result__video-container {
   width: 100%;
+  height: 386px;
   position: relative;
 }
 
 .result__video {
   width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .search-form {
   width: 100%;
   display: flex;
   justify-content: space-between;
-  align-items: end;
 }
 
 .content__details {
@@ -85,13 +88,12 @@ ol {
 }
 
 .content__list {
-  width: 399px;
   height: 298px;
-  overflow: scroll;
+  overflow: auto;
   position: relative;
   display: flex;
   flex-direction: column;
-  gap: 40px;
+  gap: 30px;
 }
 
 .content__video-card {
@@ -121,11 +123,6 @@ ol {
 
 .content__accent {
   color: #545050;
-  font-family: Oswald, sans-serif;
-  font-size: 75px;
-  font-weight: 700;
-  line-height: 94%;
-  text-transform: uppercase;
 }
 
 .content__list-item {
@@ -134,7 +131,7 @@ ol {
 }
 
 .content__card-link {
-  display: flex;
+  display: block;
   width: 100%;
   padding: 1px;
   color: currentColor;
@@ -153,6 +150,10 @@ ol {
   font-weight: 700;
   line-height: 100%;
   text-transform: uppercase;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 200px;
 }
 
 .content__video-card-description {
@@ -160,12 +161,14 @@ ol {
   font-size: 18px;
   font-weight: 400;
   line-height: 90%;
+  max-width: 200px;
 }
 
 .content__video-card-description-container {
   display: flex;
   flex-direction: column;
   gap: 6px;
+  max-width: 200px;
 }
 
 .search-form__fieldset {
@@ -173,7 +176,6 @@ ol {
 }
 
 .search-form__textfield {
-  cursor: pointer;
   color: rgba(255, 255, 255, 0.70);
   font-family: Fira Sans Condensed, sans-serif;
   font-size: 18px;
@@ -193,12 +195,17 @@ ol {
 }
 
 .button:active,
-.content__list-item:active {
+.content__card-link:active {
   background-color: #545050;
 }
 
 .search-form__textfield:hover {
   cursor: text;
+}
+
+.search-form__textfield:focus,
+.button:focus {
+  outline: none;
 }
 
 .search-form__textfield:focus-visible,
@@ -209,16 +216,13 @@ ol {
 }
 
 .button:hover,
-.content__video-card-description-container:hover {
+.content__card-link:hover,
+.search-form__checkbox-list .search-form__label:hover {
   text-decoration: underline;
   cursor: pointer;
 }
 
 .button {
-  cursor: pointer;
-}
-
-.search-form__submit-button {
   width: 194px;
   height: 34px;
   background-color: #1b1919;
@@ -229,6 +233,8 @@ ol {
   font-weight: 700;
   line-height: normal;
   border: 1px solid #fff;
+  align-self: end;
+  cursor: pointer;
 }
 
 .more-button {
@@ -266,6 +272,7 @@ ol {
 .search-form__label {
   display: flex;
   flex-direction: row;
+  align-items: center;
   gap: 5px;
 }
 
@@ -274,4 +281,8 @@ ol {
   flex-direction: row;
   gap: 15px;
   margin-top: 5px;
+}
+
+.content__card-link_current {
+  background-color: #545050;
 }
